examples/test/testpolicy1003.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1003
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key17: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value31
          key6: value43
          key1: value36
      podSelector:
        matchLabels:
          key6: value28
          key42: value14
